# agent-shield

./: README.md  pyproject.toml
agent_shield/: __init__.py  cli.py  loader.py  models.py  reporter.py  rules.py  scanner.py
agent_shield/checks/: __init__.py  permissions.py  prompt_injection.py  secret_leakage.py  tool_schema.py
tests/: __init__.py  test_loader.py  test_models.py  test_reporter.py  test_rules.py  test_scanner.py
